--- a/todolistmainpage.html
+++ b/todolistmainpage.html
@@ -28,6 +28,6 @@
                 </div>
             </div>
         </section>
-        <script src="script.js"></script>
+        <script src="scriptmain.js"></script>
     </body>
 </html>
